--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -36,7 +36,7 @@
             <div ui-layout-container>
                 <div ui-layout="{flow:'row',dividerSize:'0',disableToggle:true}">
                     <div ui-layout-container size="35px" style="background-color: #222;padding:5px 10px;">
-                        <div class="btn-group" role="group">
+                        <div class="btn-group fm-btn-group" role="group">
                             <button class="btn btn-xs btn-purple" ng-class="{1: 'active'}[dataListType]" ng-click="changeDataList(1)">日 一体化任务</button>
                             <button class="btn btn-xs btn-purple" ng-class="{2: 'active'}[dataListType]" ng-click="changeDataList(2)">日 POI任务</button>
                             <button class="btn btn-xs btn-purple" ng-class="{3: 'active'}[dataListType]" ng-click="changeDataList(3)">日 道路任务</button>
@@ -49,7 +49,7 @@
                             <div ui-layout-container class="fm-container fm-col animated fadeInLeft" size="250px">
                                 <div ui-layout="{flow:'column',dividerSize:'0',disableToggle:true}" class="dark scroll-styled">
                                     <div ui-layout-container size="36px" style="padding: 5px 5px;overflow:visible">
-                                        <div class="btn-group" role="group">
+                                        <div class="btn-group fm-btn-group" role="group">
                                             <div class="btn-group-vertical">
                                                 <button class="btn btn-xs btn-purple" ng-class="{6: 'active'}[taskStatus]" ng-click="changeTaskStatus(6)" style="padding: 20px 5px;">全<br>部</button>
                                                 <button class="btn btn-xs btn-purple" ng-class="{7: 'active'}[taskStatus]" ng-click="changeTaskStatus(7)" style="padding: 20px 5px;">开<br>启</button>
