登陆任务选择功能优化

--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/bootstrap-3.3.5/css/bootstrap-theme.css"/>
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/ui-layout/ui-layout.css">
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/leaflet-0.7.3/leaflet.css">
+        <link rel="stylesheet" type="text/css" href="../../../scripts/libs/sweet-alert-upgrade/sweetalert.css" />
         <link rel="stylesheet" type="text/css" href="../../../styles/imeep/editor.css">
         <link rel="stylesheet" type="text/css" href="../../../styles/imeep/animate.min.css">
         <script src="../../../scripts/libs/leaflet-0.7.3/leaflet-src.js"></script>
@@ -57,8 +58,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div ui-layout-container>
-                                        <div class="fm-panel" style="font-size:14px;margin-left:0px;">
+                                    <div ui-layout-container style="padding: 5px 5px 0px 0px;">
+                                        <div class="fm-panel" style="font-size:14px;">
                                             <div class="title"><label style="margin:0px;"><i class="glyphicon glyphicon-list"></i> 任务列表</label>
                                             <span style="float:right;">共 <span ng-bind="currentSubTaskList.length"></span> 条</span>
                                         </div>
@@ -84,7 +85,7 @@
                                     <span></span>
                                     </a>
                                 </div>
-                                <div class="fm-container fm-col fm-lvl1" style="right:0px;width:300px;">
+                                <div class="fm-container fm-col fm-lvl1" style="right:0px;width:300px;padding:5px;">
                                     <div class="fm-panel">
                                         <div class="title">任务信息</div>
                                         <div class="content" style="max-height: 300px;">
@@ -103,7 +104,7 @@
                                                 </li>
                                                 <li>
                                                     <div>
-                                                        <img ng-src="../../../images/poi/icon/统计图.png"/>
+                                                        <img ng-src="../../../images/poi/icon/test-chart.png"/>
                                                     </div>
                                                 </li>
                                             </ul>
