--- a/apps/imeep/login.html
+++ b/apps/imeep/login.html
@@ -15,21 +15,23 @@
         <script src="../../scripts/libs/angularjs/1.4.4/angular-cookies.min.js"></script>
         <script src="../../scripts/components/directives/fastmap-uikit-all.js"></script>
         <script src="./Application.js"></script>
+        <script src="./service/dataService.js"></script>
+        <script src="./service/dataService-manage.js"></script>
         <script src="./loginCtrl.js"></script>
     </head>
-        <body ng-controller="loginCtrl">
-            <div id="navibar" class="container-fluid">
-                <div class="navbar-header">
-                    <h1>FastMap <small>室内作业系统</small></h1>
-                </div>
+    <body ng-controller="loginCtrl">
+        <div id="navibar" class="container-fluid">
+            <div class="navbar-header">
+                <h1>FastMap <small>室内作业系统</small></h1>
             </div>
-            <!-- main login part -->
-            <div style="top: 0;bottom: 0;left: 0;right: 0;margin: auto;height: 300px;" class="login">
-                <div class="company-logo" style="margin-left: -15px"></div>
-                <login valid-type="2"></login>
-            </div>
-            <footer class="bs-docs-footer">
-                <small>Copyright©2014 北京四维图新科技股份有限公司</small>
-            </footer>
-        </body>
+        </div>
+        <!-- main login part -->
+        <div style="top: 0;bottom: 0;left: 0;right: 0;margin: auto;height: 300px;" class="login">
+            <div class="company-logo" style="margin-left: -15px"></div>
+            <login valid-type="2"></login>
+        </div>
+        <footer class="bs-docs-footer">
+            <small>Copyright©2014 北京四维图新科技股份有限公司</small>
+        </footer>
+    </body>
 </html>
