--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -69,7 +69,7 @@
                                             </ul>
                                             <ul class="fm-ul fm-ul-list">
                                                 <li ng-repeat="item in currentSubTaskList">
-                                                    <a href='javascript:void(0);' class="text-ellipsis" ng-click="highlightGrid(item)" ng-bind="$index+1+'. ' + item.name + item.name + item.name"></a>
+                                                    <a href='javascript:void(0);' class="text-ellipsis" ng-click="highlightGrid(item)" ng-bind="($index + 1) + '. ' + item.name"></a>
                                                 </li>
                                             </ul>
                                         </div>
