--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -109,7 +109,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div style="width:100%;text-align:center;position:absolute;bottom:26px;">
+                                    <div style="text-align:center;position:absolute;left:5px;right:5px;bottom:26px;">
                                         <button type="button" ng-disabled="startBtnDisabled" ng-click="startEdit()" class="btn btn-sm" style="color:white;background: rgba(150,150,150,0.5);padding: 5px 12px">
                                         <i class="glyphicon glyphicon-edit"></i> 开始作业
                                         </button>
