--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -69,6 +69,8 @@
                                     <div ng-include="addAdShapeURL" style="float: left;"></div>
                                     <div ng-include="selectRwShapeURL" style="float: left"></div>
                                     <div ng-include="addRwShapeURL" style="float: left"></div>
+                                    <div ng-include="selectZoneShapeURL" style="float: left"></div>
+                                    <div ng-include="addZoneShapeURL" style="float: left"></div>
                                 </div>
                             </div>
                             <div id="zoomLevelBar" class="div_float"></div>
