--- a/apps/poibase/poiEditor.html
+++ b/apps/poibase/poiEditor.html
@@ -89,11 +89,44 @@
                     <div ui-layout-container>
                         <div ui-layout="{flow:'row',dividerSize:'0'}">
                             <div ui-layout-container id="map" style="background-color:#FFF;width: 100%;height: 100%;position: absolute;"></div>
-                            <div id="toolsDiv" style="left:5px;top:5px;height: 40px;position: absolute;z-index:1;background-color: transparent">
-                                <div class="btn-toolbar" style="margin-left: 0px">
-                                    <div ng-include="selectShapeURL" style="float: left"></div>
-                                    <div ng-include="addShapeURL" style="float: left;"></div>
-                                    <div ng-include="modifyToolURL" style="float: left"></div>
+                            <div style="position:absolute;z-index:1;background-color:black;top:0px;left:50px;padding:5px;">
+                                <button type="button" class="btn btn-xs btn-default">搜 索</button>
+                                <button type="button" class="btn btn-xs btn-default">自动录入</button>
+                                <button type="button" class="btn btn-xs btn-default">批处理</button>
+                            </div>
+                            <div style="position:absolute;z-index:1;background-color:black;top:0px;left:250px;padding:5px;">
+                                <div class="btn-group" ng-init="chosenBtnOpened=false">
+                                    <button type="button" class="btn btn-xs btn-default" ng-click="chosenBtnOpened=!chosenBtnOpened" ng-bind="chosenBtnOpened?'收起《':'选择》'"></button>
+                                    <div class="btn-group" ng-if="chosenBtnOpened">
+                                        <button type="button" class="btn btn-xs btn-default">点</button>
+                                        <button type="button" class="btn btn-xs btn-default">线</button>
+                                        <button type="button" class="btn btn-xs btn-default">面</button>
+                                        <button type="button" class="btn btn-xs btn-default">关系</button>
+                                        <button type="button" class="btn btn-xs btn-default">Tips</button>
+                                        <button type="button" class="btn btn-xs btn-default">点要素</button>
+                                    </div>
+                                </div>
+                                <div class="btn-group" ng-init="addBtnOpened=false">
+                                    <button type="button" class="btn btn-xs btn-default" ng-click="addBtnOpened=!addBtnOpened" ng-bind="addBtnOpened?'收起《':'新增》'"></button>
+                                    <div class="btn-group" ng-if="addBtnOpened">
+                                        <button type="button" class="btn btn-xs btn-default">点</button>
+                                        <button type="button" class="btn btn-xs btn-default">线</button>
+                                        <button type="button" class="btn btn-xs btn-default">面</button>
+                                        <button type="button" class="btn btn-xs btn-default">关系</button>
+                                        <button type="button" class="btn btn-xs btn-default">Tips</button>
+                                        <button type="button" class="btn btn-xs btn-default">点要素</button>
+                                    </div>
+                                </div>
+                                <div class="btn-group" ng-init="addBtnOpened=false">
+                                    <button type="button" class="btn btn-xs btn-default" ng-click="addBtnOpened=!addBtnOpened" ng-bind="addBtnOpened?'收起《':'新增》'"></button>
+                                    <div class="btn-group" ng-if="addBtnOpened">
+                                        <button type="button" class="btn btn-xs btn-default">点</button>
+                                        <button type="button" class="btn btn-xs btn-default">线</button>
+                                        <button type="button" class="btn btn-xs btn-default">面</button>
+                                        <button type="button" class="btn btn-xs btn-default">关系</button>
+                                        <button type="button" class="btn btn-xs btn-default">Tips</button>
+                                        <button type="button" class="btn btn-xs btn-default">点要素</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -403,7 +436,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="fm-foldable fm-row" style="height: 200px;width: auto;left: 5px;" ng-style="{'bottom':{true: '0px', false: '-185px', 'none': '-200px'}[outputPanelOpened], right: {true: '360px', false: '0px', 'none': '0px'}[attrPanelOpened]}" ng-init="outputPanelOpened=true">
+                        <div class="fm-foldable fm-row" style="height: 200px;width: auto;left: 5px;" ng-style="{'bottom':{true: '0px', false: '-185px', 'none': '-200px'}[outputPanelOpened], right: {true: '290px', false: '5px', 'none': '5px'}[attrPanelOpened]}" ng-init="outputPanelOpened=true">
                             <div class="fm-fold-btn">
                                 <a href="#" ng-class="{true: 'arrow-down', false: 'arrow-up'}[outputPanelOpened]" ng-click="outputPanelOpened=!outputPanelOpened">
                                 </a>
