--- a/apps/poibase/poiEditor.html
+++ b/apps/poibase/poiEditor.html
@@ -87,10 +87,10 @@
                         </div>
                     </div>
                     <div ui-layout-container>
-                        <div ui-layout="{flow:'row',dividerSize:'0'}">
+                        <div ui-layout="{flow:'row',dividerSize:'0'}" class="blackTheme">
                             <div ui-layout-container id="map" style="background-color:#FFF;width: 100%;height: 100%;position: absolute;"></div>
                             <div style="position:absolute;z-index:1;background-color:black;top:0px;left:50px;padding:5px;">
-                                <button type="button" class="btn btn-xs btn-default">搜 索</button>
+                                <button type="button" class="btn btn-shape">搜 索</button>
                                 <button type="button" class="btn btn-xs btn-default">自动录入</button>
                                 <button type="button" class="btn btn-xs btn-default">批处理</button>
                             </div>
