--- a/apps/poibase/poiEditor.html
+++ b/apps/poibase/poiEditor.html
@@ -17,7 +17,6 @@
         <script type="text/javascript" src="../../scripts/fastmap/fastmap.js"></script>
         <script type="text/javascript" src="../../scripts/fastmap/fastmap-util.js"></script>
         <script type="text/javascript" src="../../scripts/dataApi/dataModel-poi.js"></script>
-        <script src="../../scripts/components/directives/fastmap-uikit-all.js"></script>
         <style>
                 .btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
                     border-radius: 0!important;
@@ -70,6 +69,16 @@
                 .btn{
                     position: relative;
                 }
+                .left{
+                    left: 0;
+                }
+                .left50{
+                    left: 70px;
+                }
+                .left100{
+                    left: 130px;
+                }
+                /**/
                 .btn-shape{
                     color: #fff;
                     background-color: #7F7F7F;
@@ -121,7 +130,7 @@
                         <div class="content">
                             <div class="table-toolbar">
                                 <div class="table-search fm-inline">
-                                    <button>名称</button><input class="fm-ctl" placeholder="搜索"></input>
+                                    <button>名称</button><input class="fm-ctl" placeholder="搜索" />
                                 </div>
                             </div>
                             <table class="table table-bordered table-condensed" style="color:#fff;margin-top:8px;margin-bottom:0px;">
@@ -159,16 +168,13 @@
                     <div ui-layout-container>
                         <div ui-layout="{flow:'row',dividerSize:'0'}" class="blackTheme">
                             <div ui-layout-container id="map" style="background-color:#FFF;width: 100%;height: 100%;position: absolute;"></div>
-                            <div ng-init="toolModal=false;autoModal=false;batchModal=false;" style="position:absolute;z-index:1;background-color:black;top:0px;left:50px;padding:5px;">
-                                <button type="button" class="btn btn-shape" ng-click="toolModal=!toolModal;autoModal=false;batchModal=false;">搜 索
-                                    <div ng-if="toolModal" style="width:300px;height: 200px;opacity: 0.9;background: #313131;z-index: 100;position: absolute;top:50px;left:0;border-radius: 4px;color: #fff;">搜 索</div>
-                                </button>
-                                <button type="button" class="btn btn-xs btn-default" ng-click="autoModal=!autoModal;toolModal=false;batchModal=false;">自动录入
-                                    <div ng-if="autoModal" style="width:300px;height: 200px;opacity: 0.9;background: #313131;z-index: 100;position: absolute;top:50px;left:0;border-radius: 4px;color: #fff">自动录入</div>
-                                </button>
-                                <button type="button" class="btn btn-xs btn-default" ng-click="batchModal=!batchModal;toolModal=false;autoModal=false;">批处理
-                                    <div ng-if="batchModal" style="width:300px;height: 200px;opacity: 0.9;background: #313131;z-index: 100;position: absolute;top:50px;left:0;border-radius: 4px;color: #fff">批处理</div>
-                                </button>
+                            <div style="position:absolute;z-index:1;background-color:black;top:0px;left:50px;padding:5px;">
+                                <button type="button" class="btn btn-shape" ng-click="showToolbox('search')">搜 索</button>
+                                <button type="button" class="btn btn-xs btn-default" ng-click="showToolbox('auto')">自动录入</button>
+                                <button type="button" class="btn btn-xs btn-default" ng-click="showToolbox('batch')">批处理</button>
+                                <div ng-if="toolModal" ng-class="{'left': one, 'left50': two, 'left100':three}" style="min-width:300px;min-height: 180px;opacity: 0.9;background: #313131;z-index: 100;position: absolute;top:50px;left:toolLeft;border-radius: 4px;color: #fff">
+                                    <div ng-include="tplUrl"></div>
+                                </div>
                             </div>
                             <div style="position:absolute;z-index:1;background:black;top:0px;left:250px;padding:5px;">
                                 <div class="btn-group" ng-init="chosenBtnOpened=false">
