新增工具面板

--- a/apps/poibase/poiEditor.html
+++ b/apps/poibase/poiEditor.html
@@ -169,7 +169,7 @@
                         <div ui-layout="{flow:'row',dividerSize:'0'}" class="blackTheme">
                             <div ui-layout-container id="map" style="background-color:#FFF;width: 100%;height: 100%;position: absolute;"></div>
                             <div style="position:absolute;z-index:1;background-color:black;top:0px;left:50px;padding:5px;">
-                                <button type="button" class="btn btn-shape" ng-click="showToolbox('search')">搜 索</button>
+                                <button type="button" class="btn btn-xs btn-default" ng-click="showToolbox('search')">搜　 索</button>
                                 <button type="button" class="btn btn-xs btn-default" ng-click="showToolbox('auto')">自动录入</button>
                                 <button type="button" class="btn btn-xs btn-default" ng-click="showToolbox('batch')">批处理</button>
                                 <div ng-if="toolModal" ng-class="{'left': one, 'left50': two, 'left100':three}" style="min-width:300px;min-height: 180px;opacity: 0.9;background: #313131;z-index: 100;position: absolute;top:50px;left:toolLeft;border-radius: 4px;color: #fff">
