--- a/apps/poibase/test/auto.html
+++ b/apps/poibase/test/auto.html
@@ -40,7 +40,7 @@
         <input type="checkbox" name="" value=""> 匝到
     </label>
     <div class="btngroup">
-        <button type="button" class="btn btn-xs" style="color:white;background: rgba(150,150,150,0.5);padding: 3px 12px">执　　行</button>
+        <button type="button" class="btn btn-xs" style="color:white;background: rgba(150,150,150,0.5);padding: 3px 12px" ng-click="handleMethod('auto')">执　　行</button>
         <button type="button" class="btn btn-xs" style="color:white;background: rgba(150,150,150,0.5);padding: 3px 12px" ng-click="closeToolwindow()">关　　闭</button>
     </div>
 </div>
