--- a/apps/poibase/test/batch.html
+++ b/apps/poibase/test/batch.html
@@ -76,6 +76,6 @@
 </div>
 
 <div class="btngroup" style="clear: both;margin-top: 15px">
-    <button type="button" class="btn btn-xs" style="color:white;background: rgba(150,150,150,0.5);padding: 3px 12px">执　　行</button>
+    <button type="button" class="btn btn-xs" style="color:white;background: rgba(150,150,150,0.5);padding: 3px 12px" ng-click="handleMethod('batch')">执　　行</button>
     <button type="button" class="btn btn-xs" style="color:white;background: rgba(150,150,150,0.5);padding: 3px 12px" ng-click="closeToolwindow()">关　　闭</button>
 </div>
