--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -87,7 +87,7 @@
                                 </div>
                                 <div class="fm-container fm-col fm-lvl1" style="right:0px;width:300px;padding:5px;">
                                     <div class="fm-panel">
-                                        <div class="title">任务信息</div>
+                                        <div class="title">任务概况</div>
                                         <div class="content" style="max-height: 300px;">
                                             <ul class="fm-ul fm-ul-list">
                                                 <li>
@@ -110,14 +110,23 @@
                                                     <label style="letter-spacing: 1px;text-indent: 15px">作 业 季：</label>
                                                     <label ng-bind="getTaskSeason()"></label>
                                                 </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <!-- -->
+                                    <div class="fm-panel">
+                                        <div class="title">任务统计</div>
+                                        <div class="content" style="max-height: 300px;">
+                                            <ul class="fm-ul fm-ul-list">
                                                 <li>
                                                     <div>
-                                                        <img ng-src="../../../images/poi/icon/test-chart.png"/>
+                                                        <img ng-src="../../../images/temp/test-chart.png"/>
                                                     </div>
                                                 </li>
                                             </ul>
                                         </div>
                                     </div>
+                                </div>
                                     <div style="text-align:center;position:absolute;left:5px;right:5px;bottom:26px;">
                                         <button type="button" ng-disabled="currentTaskData.status == 0" ng-click="startEdit()" class="btn btn-sm" style="color:white;background: rgba(150,150,150,0.5);padding: 5px 12px">
                                         <i class="glyphicon glyphicon-edit"></i> 开始作业
