--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -70,7 +70,7 @@
                                             <ul class="fm-ul fm-ul-list">
                                                 <li ng-repeat="item in currentSubTaskList">
                                                     <a href='javascript:void(0);' class="text-ellipsis" ng-click="selectSubtask(item)" ng-bind="($index + 1) + '. ' + item.name"></a>
-                                                    <span ng-if="currentTaskData.name===item.name" class="glyphicon glyphicon-ok"></span>
+                                                    &nbsp;<span ng-if="currentTaskData.name===item.name" class="glyphicon glyphicon-ok"></span>
                                                 </li>
                                             </ul>
                                         </div>
