修改子任务列表

--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -92,7 +92,7 @@
                                             <ul class="fm-ul fm-ul-list">
                                                 <li>
                                                     <label style="text-indent: 15px">类　　型：</label>
-                                                    <label ng-bind="getTaskType()"></label>
+                                                    <label ng-bind="dataStringType"></label>
                                                 </li>
                                                 <li>
                                                     <label style="text-indent: 15px">开　　始：</label>
