--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="banner-bottom">
                     <div><a><i title="用户" class="glyphicon glyphicon-user"></i></a></div>
-                    <div><a><i title="退出" class="glyphicon glyphicon-log-out"></i></a></div>
+                    <div><a href="javascript:void(0);" ng-click="goback()"><i title="返回" class="glyphicon glyphicon-log-out"></i></a></div>
                 </div>
             </div>
             <div ui-layout-container>
@@ -61,7 +61,7 @@
                             <div ui-layout-container id="map" style="background-color:#FFF;width: 100%;height: 100%;position: absolute;">
                             </div>
                             <!-- <div id="toolsDiv" style="left:5px;top:5px;height: 40px;position: absolute;z-index:1;background-color: transparent">
-                                    <div class="btn-toolbar" style="margin-left: 0px">
+                                <div class="btn-toolbar" style="margin-left: 0px">
                                             <div ng-include="selectShapeURL" style="float: left"></div>
                                             <div ng-include="selectPoiURL" style="float: left"></div>
                                             <div ng-include="addPoiURL" style="float: left;"></div>
@@ -73,7 +73,7 @@
                                             <div ng-include="addRwShapeURL" style="float: left"></div>
                                             <div ng-include="selectZoneShapeURL" style="float: left"></div>
                                             <div ng-include="addZoneShapeURL" style="float: left"></div>
-                                    </div>
+                                </div>
                             </div> -->
                             <div ng-include="mapToolbar" style="position:absolute;z-index:1;background:black;top:0px;left:290px;padding:5px;"></div>
                             <div id="zoomLevelBar" class="div_float"></div>
